@@ -99,6 +99,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 709) Cannot rename/move images and other media files [EXPERIMENTAL]
 * Custom rollback summaries now accept the same arguments as the default message
 * (bug 12542) Added hooks for expansion of Special:Listusers
+* Added new variable $wgSharedDBtables for altering the list of tables which are
+  shared when $wgSharedDB is enabled.
 
 === Bug fixes in 1.13 ===
 
